--- a/style.css
+++ b/style.css
@@ -129,3 +129,12 @@ body {
     color: var(--cyan);
     cursor: pointer;
 }
+
+
+
+
+@media only screen and (max-width: 375px) {
+ .nft-card {
+     width: 325px;
+ }
+}
